package s191220119.task3.src;

import s191220119.task3.src.Matrix.Position;

public interface Element {
    
    public void setPosition(Position position);

    public Position getPosition();

    public int getValue();
    
}
